@@ -160,6 +160,8 @@ Cacti CHANGELOG
 -feature: Exit is either a database or table does not exist
 -feature: Add developer debug level to reduce SQL messages in DEBUG
 -feature: Add support for group membership for LDAP authenication
+-feature: Add Tab's to the Utilities View Tech Page
+-feature: Add Process Status Information to the View Tech Page
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
